# EmuWatcher

./: .gitignore  Makefile  README.md  USAGE.md  config.json  go.mod  go.sum  main.go
.github/ISSUE_TEMPLATE/: bug_report.md
adb/: adb.go
assets/: EmuWatcher.exe.xml  Updater.exe.xml  convert.bat
assets/datasets/: Cookies  appStorage.json
cli/login/: login.go
cli/root/: root.go
cli/version/: version.go
cli/watch/: watch.go
cmd/EmuWatcher/: EmuWatcher.go  EmuWatcher.syso
emulator/: autoexec.go  clone.go  debloat.go  ldplayer.go  login.go  open.go  watch.go
initialize/: init.go
ocr/: ocr.go
pkg/commands/login/: login.go
pkg/sys/: system.go
pkg/update/: update.go
pkg/webhook/: discord.go
roblox/: cookies.go
scripts/: .hash  EmuWatcher.lua
updater/: Cargo.toml  build.rs
updater/src/: main.rs
utils/: utils.go
utils/cache/: cache.go
utils/cmd/: cmd.go
utils/config/: config.go
utils/imghandler/: image.go
utils/log/: log.go
utils/menu/: menu.go
utils/ui/: tview.go
utils/version/: version.go
