[package]
name = "Updater"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[build-dependencies]
winresource = "0.1.0"

[dependencies]
sevenz-rust = { version = "0.2" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3" }
sysinfo = { version = "0.31", features = ["windows"] }

[package.metadata.winresource]
ProductName = "EmuWatcher Updater"
FileVersion = "1.0.0"
LegalTrademarks = "EmuWatcher"
FileDescription = "EmuWatcher Updater"
